--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,19 +29,25 @@ dist.jar=${dist.dir}/Recetario.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.h2-1.4.187.jar=/Users/pablo/Downloads/h2-1.4.187.jar
+file.reference.ormlite-core-4.49-SNAPSHOT.jar=/Users/pablo/Downloads/ormlite-core-4.49-SNAPSHOT.jar
+file.reference.ormlite-jdbc-4.49-SNAPSHOT.jar=/Users/pablo/Downloads/ormlite-jdbc-4.49-SNAPSHOT.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.ormlite-core-4.49-SNAPSHOT.jar}:\
+    ${file.reference.ormlite-jdbc-4.49-SNAPSHOT.jar}:\
+    ${file.reference.h2-1.4.187.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -62,7 +67,6 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/jfxrt.jar:\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
@@ -80,7 +84,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=recetario.Application
+javafx.main.class=recetario.Recetario
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -104,6 +108,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
