New 'default' img, resized Incio.fxml and added Explication.fxml

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,8 +4,11 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.h2-1.4.187.jar=/Users/toespar/Documents/Recetario/data/recetario/h2-1.4.187.jar
+file.reference.ormlite-core-4.49-SNAPSHOT.jar=/Users/toespar/Documents/Recetario/data/recetario/ormlite-core-4.49-SNAPSHOT.jar
+file.reference.ormlite-jdbc-4.49-SNAPSHOT.jar=/Users/toespar/Documents/Recetario/data/recetario/ormlite-jdbc-4.49-SNAPSHOT.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=/Users/pablo/Library/Application Support/NetBeans/8.0.2/build.properties
+user.properties.file=/Users/toespar/Library/Application Support/NetBeans/8.0.2/build.properties
